# wumblr-freeq

./: .gitignore  Cargo.toml  README.md  motd.txt
.github/workflows/: ci.yml
docs/: M2-CLOSEOUT.md
freeq-agent-kit/: Cargo.toml
freeq-agent-kit/src/: addressing.rs  lib.rs  speech.rs  vad.rs
freeq-android/freeq/: build.gradle.kts
freeq-app/src/: store.ts
freeq-auth-broker/src/: main.rs
freeq-av/src/: lib.rs  session.rs
freeq-bot-kit-js/: README.md  package-lock.json  package.json
freeq-bot-kit-js/src/: bot.ts  index.ts
freeq-bots/src/: main.rs
freeq-eliza/: Cargo.toml  README.md
freeq-eliza/src/: ambient.rs  audio_tap.rs  character_profile.rs  identity.rs  imagegen.rs  irc.rs  lib.rs  main.rs  proactive.rs  qa.rs  social.rs  stt.rs  tts.rs  video.rs  video_particles.rs
freeq-eliza/tests/: audio_tap_test.rs  e2e_two_servers_test.rs  identity_test.rs
freeq-ios/: build-rust.sh
freeq-ios/freeq/: ContentView.swift
freeq-ios/freeq.xcodeproj/: project.pbxproj
freeq-ios/freeqTests/: AvSessionTests.swift  BufferRoutingTests.swift
freeq-sdk-ffi/src/: freeq.udl  lib.rs
freeq-sdk-js/src/: client.ts  types.ts
freeq-sdk/examples/: agent_test.rs  demo_phase2.rs  demo_phase3.rs  demo_phase4.rs  echo_bot.rs  framework_bot.rs  moderation_bot.rs  pi_agent.rs  spawn_test.rs
freeq-sdk/src/: av.rs  client.rs  lib.rs
freeq-sdk/tests/: adversarial.rs  sdk_edge_cases.rs
freeq-server/src/: av.rs  av_artifacts.rs  av_media.rs  db.rs  iroh.rs  s2s.rs  server.rs  web.rs
freeq-server/tests/: agent_native.rs  av_bridge_test.rs  broker_auth.rs  bug_hunt.rs  chathistory_adversarial.rs  edit_delete_adversarial.rs  integration.rs  iroh_alpn_router.rs  nasty_edge_cases.rs  oauth_scope.rs  protocol_ctf.rs  protocol_hardening.rs  s2s_acceptance.rs  s2s_adversarial.rs  sasl_adversarial.rs  sdk_client.rs
freeq-site/: app.py
freeq-site/templates/: docs_index.html
freeq-transcriber-bot/src/: irc.rs  lib.rs  main.rs  (+1 more)
freeq-utopia/: Cargo.toml
freeqcc/: PLAN-DELEGATION.md  package-lock.json  package.json
wumblr-backend/: Cargo.toml  Dockerfile  README.md
wumblr-backend/src/: app.rs  broker.rs  config.rs  freeq.rs  issuer.rs  main.rs
wumblr-backend/src/routes/: auth.rs  communities.rs  credentials.rs  health.rs  mod.rs  session.rs  well_known.rs
wumblr-deploy/: Dockerfile  README.md  docker-compose.yml
wumblr-freeq-client/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
wumblr-issuer/: Cargo.toml
wumblr-issuer/src/: credentials.rs  did_doc.rs  epds.rs  keys.rs  lib.rs  main.rs  sessions.rs
wumblr-issuer/tests/: parity.rs
wumblr-lexicons/: package.json  tsconfig.json
wumblr-shared/: package.json
(+76 files in other folders)
