[package]
name = "freeq-agent-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Voice-agent building blocks for freeq: address detection, STT hallucination filtering, speech/link splitting, and voice-activity segmentation."

[lib]
name = "freeq_agent_kit"
path = "src/lib.rs"

# Deliberately dependency-free — these are pure helpers, so an agent can
# pull them in without dragging the media stack along.

[lints]
workspace = true
