[package]
name = "wumblr-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "wumblr product API — approval queue, freeq credential issuer, broker/appview glue"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
reqwest.workspace = true
clap.workspace = true
dotenvy.workspace = true
