[package]
name = "wumblr-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wumblr backend — OAuth-glue session bridge between freeq-auth-broker and the wumblr frontend"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
reqwest.workspace = true
clap.workspace = true
dotenvy.workspace = true
rand.workspace = true
base64.workspace = true
async-trait = "0.1"
