[package]
name = "wumblr-issuer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wumblr VerifiableCredential issuer — signs wumblr_member:<community> credentials over PDS-public membership state"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
freeq-sdk = { path = "../freeq-sdk" }

[dev-dependencies]
freeq-server = { path = "../freeq-server" }
